Some more exploration/testing stuff

--- a/SimTECH/Shared/MainLayout.razor
+++ b/SimTECH/Shared/MainLayout.razor
@@ -14,7 +14,9 @@
         </div>
 
         <article class="content px-4">
-            @Body
+            <CascadingValue Name="NumberForEveryInternalComponent" Value="7">
+                @Body
+            </CascadingValue>
         </article>
     </main>
 </div>
