Did a bit  of stuffand things

--- a/SimTECH/SimTECH/Pages/Admin.razor
+++ b/SimTECH/SimTECH/Pages/Admin.razor
@@ -1,4 +1,5 @@
-﻿@attribute [Authorize(Roles = "admin")]
+﻿@page "/admin"
+@attribute [Authorize(Roles = "admin")]
 
 <h3>Admin</h3>
 <p>Exclusive to admins >:)</p>
