--- a/SimTECH/SimTECH/Shared/LoginDisplay.razor
+++ b/SimTECH/SimTECH/Shared/LoginDisplay.razor
@@ -5,12 +5,21 @@
 <h3>Login</h3>
 <button type="button" class="btn btn-primary" @onclick=LoginAsync>Login</button>
 
+@if (!string.IsNullOrEmpty(notification))
+{
+    <p>@notification</p>
+}
+
 @code {
+    private string notification = string.Empty;
+
     public async Task LoginAsync()
     {
         var exampleName = "belial";
         var examplePass = "theredking";
 
         await SimAuthenticationStateProvider.LoginAsync(exampleName, examplePass);
+
+        notification = "Goed ingelogd, jongen!";
     }
 }
