--- a/SimTECH/SimTECH/_Imports.razor
+++ b/SimTECH/SimTECH/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using SimTECH
+@using SimTECH.Data.Services
 @using SimTECH.Pages.Setup
 @using SimTECH.Providers
 @using SimTECH.Shared
