--- a/SimTECH/SimTECH/Shared/MainLayout.razor
+++ b/SimTECH/SimTECH/Shared/MainLayout.razor
@@ -1,6 +1,10 @@
 ﻿@inherits LayoutComponentBase
 @inject SimAuthenticationStateProvider SimAuthenticationStateProvider
 
+<MudThemeProvider />
+<MudDialogProvider />
+<MudSnackbarProvider />
+
 <PageTitle>SimTECH</PageTitle>
 
 <div class="page">
