--- a/SimTECH/SimTECH/_Imports.razor
+++ b/SimTECH/SimTECH/_Imports.razor
@@ -6,6 +6,9 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using MudBlazor
+@using MudBlazor.Template
+@using MudBlazor.Template.Shared
 @using SimTECH
 @using SimTECH.Data.Services
 @using SimTECH.Pages.Setup
