basic additional implementations of bar and screens

--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -4,41 +4,82 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.False">
+    <MudGrid>
+        <MudItem xs="12" sm="6" md="4">
+            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
+                ayy
+            </MudPaper>
+        </MudItem>
+        <MudItem xs="12" sm="6" md="4">
+            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
+                <h1>Hello, world!</h1>
+                Welcome to your new app.
+            </MudPaper>
+        </MudItem>
+        <MudItem xs="12" sm="12" md="4">
+            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
+                lmao
+            </MudPaper>
+        </MudItem>
+        <MudItem xs="12" sm="6">
+            <MudGrid>
+                <MudItem xs="12">
+                    <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
 
-Welcome to your new app.
-
-<AuthorizeView>
-    <Authorized>
-        <p>Damn @(AuthenticationProvider.CurrentUser?.FullName ?? "wtf who"), good to see you logged in.</p>
-    </Authorized>
-    <NotAuthorized>
-        <p>What are you doing here, mate. You aren't even logged in!</p>
-    </NotAuthorized>
-</AuthorizeView>
-
-<AuthorizeView Roles="admin">
-    <Authorized>
-        <p>O damn, hello Mr. Admin! Love yo see ya :)</p>
-    </Authorized>
-</AuthorizeView>
-
-<AuthorizeView Policy="CoolOnly">
-    <Authorized>
-        <p>Good to see some cool dudes here</p>
-    </Authorized>
-    <NotAuthorized>
-        <p>No offense, but you're kinda cringe... lol</p>
-    </NotAuthorized>
-</AuthorizeView>
-
-<AuthorizeView Policy="ChoicePolicy" Resource="3">
-    <Authorized>
-        <p>But man, you wouldn't believe the cringe-worthy dudes that show up here.</p>
-    </Authorized>
-    <NotAuthorized>
-        <p>Christ mate, why are you like the way you are.</p>
-    </NotAuthorized>
-</AuthorizeView>
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+                    </MudPaper>
+                </MudItem>
+                <MudItem xs="12">
+                    <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
+                        <SurveyPrompt Title="How is Blazor working for you?" />
+                    </MudPaper>
+                </MudItem>
+            </MudGrid>
+        </MudItem>
+        <MudItem xs="12" sm="6">
+            <MudPaper Elevation="2" Class="pa-4" Style="height: 100%">
+                <AuthorizeView>
+                    <Authorized>
+                        <p>Damn @(AuthenticationProvider.CurrentUser?.FullName ?? "wtf who"), good to see you logged in.</p>
+                    </Authorized>
+                    <NotAuthorized>
+                        <p>What are you doing here, mate. You aren't even logged in!</p>
+                    </NotAuthorized>
+                </AuthorizeView>
+            </MudPaper>
+        </MudItem>
+        <MudItem xs="12" sm="6" md="4">
+            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
+                <AuthorizeView Roles="admin">
+                    <Authorized>
+                        <p>O damn, hello Mr. Admin! Love yo see ya :)</p>
+                    </Authorized>
+                </AuthorizeView>
+            </MudPaper>
+        </MudItem>
+        <MudItem xs="12" sm="6" md="4">
+            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
+                <AuthorizeView Policy="CoolOnly">
+                    <Authorized>
+                        <p>Good to see some cool dudes here</p>
+                    </Authorized>
+                    <NotAuthorized>
+                        <p>No offense, but you're kinda cringe... lol</p>
+                    </NotAuthorized>
+                </AuthorizeView>
+            </MudPaper>
+        </MudItem>
+        <MudItem xs="12" sm="12" md="4">
+            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
+                <AuthorizeView Policy="ChoicePolicy" Resource="3">
+                    <Authorized>
+                        <p>But man, you wouldn't believe the cringe-worthy dudes that show up here.</p>
+                    </Authorized>
+                    <NotAuthorized>
+                        <p>Christ mate, why are you like the way you are.</p>
+                    </NotAuthorized>
+                </AuthorizeView>
+            </MudPaper>
+        </MudItem>
+    </MudGrid>
+</MudContainer>
