--- a/SimTECH/SimTECH/_Imports.razor
+++ b/SimTECH/SimTECH/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.JSInterop
 @using MudBlazor
 @using SimTECH
+@using SimTECH.Data.Models
 @using SimTECH.Data.Services
 @using SimTECH.Pages.Setup
 @using SimTECH.Providers
