Added country flags

--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -8,7 +8,7 @@
     <MudGrid>
         <MudItem xs="12" sm="6" md="4">
             <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
-                ayy
+                <CountryFlag Code="NL"/>
             </MudPaper>
         </MudItem>
         <MudItem xs="12" sm="6" md="4">
@@ -26,12 +26,12 @@
             <MudGrid>
                 <MudItem xs="12">
                     <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
-
+                        temp
                     </MudPaper>
                 </MudItem>
                 <MudItem xs="12">
                     <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
-                        <SurveyPrompt Title="How is Blazor working for you?" />
+                        <ExampleShared Title="Message for a train-lover" />
                     </MudPaper>
                 </MudItem>
             </MudGrid>
