--- a/SimTECH/SimTECH/Shared/ExampleShared.razor
+++ b/SimTECH/SimTECH/Shared/ExampleShared.razor
@@ -1,12 +1,14 @@
-﻿<div class="alert alert-secondary mt-4">
+﻿<h3>ExampleShared</h3>
+
+<div class="alert alert-secondary mt-4">
     <span class="oi oi-pencil me-2" aria-hidden="true"></span>
     <strong>@Title</strong>
 
     <span class="text-nowrap">
-        Please take our
-        <a target="_blank" class="font-weight-bold link-dark" href="https://go.microsoft.com/fwlink/?linkid=2186158">brief survey</a>
+        I really like
+        <span>trains</span>
     </span>
-    and tell us what you think.
+    and so do you.
 </div>
 
 @code {
