--- a/SimTECH/SimTECH/_Imports.razor
+++ b/SimTECH/SimTECH/_Imports.razor
@@ -1,5 +1,4 @@
-﻿@using System.Net.Http
-@using Microsoft.AspNetCore.Authorization
+﻿@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -10,9 +9,12 @@
 @using SimTECH
 @using SimTECH.Data.Models
 @using SimTECH.Data.Services
+@using SimTECH.Extensions
 @using SimTECH.Pages.Setup
 @using SimTECH.Providers
 @using SimTECH.Shared
+@using System.ComponentModel
+@using System.Net.Http
 
 @*Authorize attribute underneath would demand that an user is logged in for the whole application (whole since it's applied here)*@
 @attribute [Authorize]
