--- a/SimTECH/SimTECH/Shared/CountryFlag.razor
+++ b/SimTECH/SimTECH/Shared/CountryFlag.razor
@@ -24,7 +24,7 @@
     }
 </style>
 
-<span class="@flagIconClass">@IsoCountryCodeToFlagEmoji(Code)</span>
+<span class="@flagIconClass">@flagLabel</span>
 
 @code {
     [Parameter]
@@ -32,6 +32,9 @@
 
     [Parameter]
     public FlagSize Size { get; set; } = FlagSize.Normal;
+
+    [Parameter]
+    public bool IncludeName { get; set; } = false;
 
     [Parameter]
     public string Class { get; set; } = string.Empty;
@@ -57,6 +60,25 @@
         get
         {
             return $"flag {flagSize}";
+        }
+    }
+
+    private string flagLabel
+    {
+        get
+        {
+            var flagString = @IsoCountryCodeToFlagEmoji(Code);
+
+            if (this.IncludeName)
+            {
+                // Not the cleanest solution for this, altough generally there isnt a need to print a list of country names
+                var countryValues = (Country[])Enum.GetValues(typeof(Country));
+                var countryEnum = Array.Find(countryValues, e => e.ToString() == this.Code);
+
+                flagString += $" {countryEnum.GetDescription()}";
+            }
+
+            return flagString;
         }
     }
 
