country selector now actually works

--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -8,7 +8,7 @@
     <MudGrid>
         <MudItem xs="12" sm="6" md="4">
             <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
-                <CountryFlag Code="NL"/>
+                <MudCountrySelect />
             </MudPaper>
         </MudItem>
         <MudItem xs="12" sm="6" md="4">
@@ -19,14 +19,14 @@
         </MudItem>
         <MudItem xs="12" sm="12" md="4">
             <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
-                lmao
+                ahum
             </MudPaper>
         </MudItem>
         <MudItem xs="12" sm="6">
             <MudGrid>
                 <MudItem xs="12">
                     <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
-                        temp
+                        <CountryFlag Code="NL" />
                     </MudPaper>
                 </MudItem>
                 <MudItem xs="12">
@@ -83,3 +83,6 @@
         </MudItem>
     </MudGrid>
 </MudContainer>
+
+@code {
+}
