--- a/SimTECH/SimTECH/Pages/Setup/Drivers.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Drivers.razor
@@ -3,15 +3,17 @@
 
 <PageTitle>Drivers</PageTitle>
 
-<h3>Drivers</h3>
+<MudContainer>
+    <h3>Drivers</h3>
 
-<MudDataGrid Items="@DriverNames">
-    <Columns>
-        <Column T="Driver" Field="Name" />
-        <Column T="Driver" Field="Age" />
-        <Column T="Driver" Field="Role" />
-    </Columns>
-</MudDataGrid>
+    <MudDataGrid Items="@DriverNames">
+        <Columns>
+            <Column T="Driver" Field="Name" />
+            <Column T="Driver" Field="Age" />
+            <Column T="Driver" Field="Role" />
+        </Columns>
+    </MudDataGrid>
+</MudContainer>
 
 @code {
     private IEnumerable<Driver> DriverNames = new List<Driver>();
