--- a/SimTECH/SimTECH/Pages/Setup/_Setup.razor
+++ b/SimTECH/SimTECH/Pages/Setup/_Setup.razor
@@ -2,6 +2,18 @@
 
 <PageTitle>Setup</PageTitle>
 
+<MudTabs Elevation="2" ApplyEffectsToContainer="true" PanelClass="pa-6">
+    <MudTabPanel Text="Drivers">
+        <Drivers />
+    </MudTabPanel>
+    <MudTabPanel Text="Drivers">
+        <Drivers />
+    </MudTabPanel>
+    <MudTabPanel Text="Drivers">
+        <Drivers />
+    </MudTabPanel>
+</MudTabs>
+
 @code {
 
 }
