--- a/SimTECH/SimTECH/Shared/CountryFlag.razor
+++ b/SimTECH/SimTECH/Shared/CountryFlag.razor
@@ -1,12 +1,4 @@
-﻿@*<select @bind="_selectedCountryCode">
-    <option disabled>Select country code</option>
-    @foreach (var country in (Country[]) Enum.GetValues(typeof(Country)))
-    {
-        <option value="@country.ToString()">@IsoCountryCodeToFlagEmoji(country.ToString()) @country.GetDescription()</option>
-    }
-</select>*@
-
-<style type="text/css">
+﻿<style type="text/css">
     .flag {
         font-family: 'NotoColorEmojiLimited', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     }
@@ -67,7 +59,7 @@
     {
         get
         {
-            var flagString = @IsoCountryCodeToFlagEmoji(Code);
+            var flagString = IsoCountryCodeToFlagEmoji(Code);
 
             if (this.IncludeName)
             {
@@ -85,7 +77,7 @@
     private string IsoCountryCodeToFlagEmoji(string countryCode)
     {
         if (string.IsNullOrEmpty(countryCode))
-            return string.Empty;
+            return "[Not found]";
 
         return string.Concat(countryCode.ToUpper().Select(e => char.ConvertFromUtf32(e + 0x1F1A5)));
     }
