Added a basic teams viewer, including a simple detail view here

--- a/SimTECH/SimTECH/Pages/Setup/Drivers.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Drivers.razor
@@ -1,10 +1,11 @@
 ﻿@page "/drivers"
+@layout SetupLayout
 @inject DriverService DriverService
 
 <PageTitle>Drivers</PageTitle>
 
 <MudContainer>
-    <h3>Drivers</h3>
+    <h2>Drivers</h2>
 
     <MudDataGrid Items="@DriverNames">
         <Columns>
