--- a/SimTECH/SimTECH/Pages/Setup/_Setup.razor
+++ b/SimTECH/SimTECH/Pages/Setup/_Setup.razor
@@ -1,18 +1,15 @@
 ﻿@page "/setup"
+@layout SetupLayout
 
 <PageTitle>Setup</PageTitle>
 
-<MudTabs Elevation="2" ApplyEffectsToContainer="true" PanelClass="pa-6">
-    <MudTabPanel Text="Drivers">
-        <Drivers />
-    </MudTabPanel>
-    <MudTabPanel Text="Drivers">
-        <Drivers />
-    </MudTabPanel>
-    <MudTabPanel Text="Drivers">
-        <Drivers />
-    </MudTabPanel>
-</MudTabs>
+<MudContainer>
+    <MudCard>
+        <MudCardContent>
+            <MudText>Welcome to the setup page</MudText>
+        </MudCardContent>
+    </MudCard>
+</MudContainer>
 
 @code {
 
