--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -12,6 +12,18 @@ html, body {
     font-family: 'NotoColorEmojiLimited', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
+.flag-sm {
+    font-size: 1em;
+}
+
+.flag-md {
+    font-size: 2em;
+}
+
+.flag-lg {
+    font-size: 4em;
+}
+
 #blazor-error-ui {
     background: lightyellow;
     bottom: 0;
