--- a/SimTECH/SimTECH/Shared/SetupLayout.razor
+++ b/SimTECH/SimTECH/Shared/SetupLayout.razor
@@ -6,13 +6,12 @@
         <MudButtonGroup Color="Color.Default" Size="Size.Large" Variant="Variant.Outlined">
             <MudButton Href="/drivers">Drivers</MudButton>
             <MudButton Href="/teams">Teams</MudButton>
-            <MudButton Href="/teams">Teams</MudButton>
-            <MudButton Href="/teams">Teams</MudButton>
-            <MudButton Href="/teams">Teams</MudButton>
-            <MudButton Href="/teams">Teams</MudButton>
-            <MudButton Href="/teams">Teams</MudButton>
-            <MudButton Href="/teams">Teams</MudButton>
-            <MudButton Href="/teams">Teams</MudButton>
+            <MudButton Href="/">Tracks</MudButton>
+            <MudButton Href="/">Traits</MudButton>
+            <MudButton Href="/">Engines</MudButton>
+            <MudButton Href="/">Tyre suppliers</MudButton>
+            <MudButton Href="/">Tyres</MudButton>
+            <MudButton Href="/">Strategies</MudButton>
         </MudButtonGroup>
     </MudContainer>
     <MudContainer>
