--- a/SimTECH/SimTECH/Shared/CountryFlag.razor
+++ b/SimTECH/SimTECH/Shared/CountryFlag.razor
@@ -43,12 +43,8 @@
         {
             var flagString = Code.CountryCodeToEmoji();
 
-            if (this.IncludeName)
+            if (this.IncludeName && Enum.TryParse(this.Code, out Country countryEnum))
             {
-                // Not the cleanest solution for this, altough generally there isnt a need to print a list of country names
-                var countryValues = (Country[])Enum.GetValues(typeof(Country));
-                var countryEnum = Array.Find(countryValues, e => e.ToString() == this.Code);
-
                 flagString += $" {countryEnum.GetDescription()}";
             }
 
