--- a/SimTECH/SimTECH/Shared/MainLayout.razor
+++ b/SimTECH/SimTECH/Shared/MainLayout.razor
@@ -19,6 +19,9 @@
             <ChildContent>
                 <AuthorizeView>
                     <Authorized>
+                        <MudMenuItem>
+                            <MudNavLink Href="/admin" Match="NavLinkMatch.Prefix">Admin</MudNavLink>
+                        </MudMenuItem>
                         <MudMenuItem OnClick="LogoutAsync">Logout</MudMenuItem>
                     </Authorized>
                     <NotAuthorized>
