--- a/SimTECH/SimTECH/Shared/NavMenu.razor
+++ b/SimTECH/SimTECH/Shared/NavMenu.razor
@@ -1,8 +1,8 @@
 ﻿<MudNavMenu>
-    <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Store">Home</MudNavLink>
-    <MudNavLink Href="/counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Store">Counter</MudNavLink>
-    <MudNavLink Href="/setup" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Store">Setup</MudNavLink>
-    <MudNavLink Href="/admin" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Store">Admin</MudNavLink>
+    <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
+    <MudNavLink Href="/counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Numbers">Counter</MudNavLink>
+    <MudNavLink Href="/setup" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Settings">Setup</MudNavLink>
+    <MudNavLink Href="/season" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Flag">Season</MudNavLink>
 </MudNavMenu>
 
 @code {
