--- a/SimTECH/SimTECH/Pages/Setup/_Setup.razor
+++ b/SimTECH/SimTECH/Pages/Setup/_Setup.razor
@@ -6,11 +6,7 @@
 <MudContainer>
     <MudCard>
         <MudCardContent>
-            <MudText>Welcome to the setup page</MudText>
+            <MudText>Welcome to the setup page, do we even need this page though?</MudText>
         </MudCardContent>
     </MudCard>
 </MudContainer>
-
-@code {
-
-}
