--- a/SimTECH/SimTECH/Shared/NavMenu.razor
+++ b/SimTECH/SimTECH/Shared/NavMenu.razor
@@ -1,10 +1,7 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
-    <MudNavLink Href="/counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Numbers">Counter</MudNavLink>
-    <MudNavLink Href="/setup" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Settings">Setup</MudNavLink>
+    <MudNavLink Href="/setup" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Settings">Participants</MudNavLink>
+    <MudNavLink Href="/factor" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Settings">Race factors</MudNavLink>
     <MudNavLink Href="/season" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Flag">Season</MudNavLink>
+    <MudNavLink Href="/league" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Flag">League</MudNavLink>
 </MudNavMenu>
-
-@code {
-
-}
