--- a/SimTECH/SimTECH/Shared/SetupLayout.razor
+++ b/SimTECH/SimTECH/Shared/SetupLayout.razor
@@ -2,7 +2,7 @@
 @layout MainLayout
 
 <MudLayout>
-    <MudPaper Class="mb-10" Elevation="15">
+    <MudPaper Class="mt-10 mb-10" Elevation="15">
         <MudToolBar>
             <MudButton Href="/drivers" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.PeopleAlt" Color="Color.Inherit" IconColor="Color.Primary" Size="Size.Large">Drivers</MudButton>
             <MudButton Href="/teams" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.CarRepair" Color="Color.Inherit" IconColor="Color.Primary" Size="Size.Large">Teams</MudButton>
