--- a/SimTECH/SimTECH/Pages/Setup/DriverNewDialog.razor
+++ b/SimTECH/SimTECH/Pages/Setup/DriverNewDialog.razor
@@ -8,9 +8,8 @@
         </MudText>
     </TitleContent>
     <DialogContent>
-        <MudTextField Value="@driver.Name" Label="Name" />
-        <MudNumericField Value="@driver.Age" Label="Age" />
-        <MudTextField Value="@driver.Role" Label="Role" />
+        <MudTextField Value="@driver.FirstName" Label="FirstName" />
+        <MudTextField Value="@driver.LastName" Label="LastName" />
     </DialogContent>
     <DialogActions>
         <MudButton OnClick="Cancel">Cancel</MudButton>
