--- a/SimTECH/SimTECH/_Imports.razor
+++ b/SimTECH/SimTECH/_Imports.razor
@@ -7,9 +7,11 @@
 @using Microsoft.JSInterop
 @using MudBlazor
 @using SimTECH
+@using SimTECH.Components
 @using SimTECH.Data.Models
 @using SimTECH.Data.Services
 @using SimTECH.Extensions
+@using SimTECH.Pages.Factors
 @using SimTECH.Pages.Setup
 @using SimTECH.Providers
 @using SimTECH.Shared
