Added all the base model classes and properties

--- a/SimTECH/SimTECH/Shared/NavMenu.razor
+++ b/SimTECH/SimTECH/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
-    <MudNavLink Href="/setup" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Settings">Participants</MudNavLink>
+    <MudNavLink Href="/setup" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Settings">Entrants</MudNavLink>
     <MudNavLink Href="/factor" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Settings">Race factors</MudNavLink>
     <MudNavLink Href="/season" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Flag">Season</MudNavLink>
     <MudNavLink Href="/league" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Flag">League</MudNavLink>
